# epsilon

./: .gitignore  Cargo.toml
aseprites/: bag.ase  empty_heart.ase  heart.ase  icon.ase  player-sample-standing-Sheet.ase  player-sample-standing.ase
aseprites/item/: stone.ase
epsilon-client/: Cargo.toml
epsilon-client/assets/items/: ston.ron
epsilon-client/src/: game_manager.rs  lib.rs
epsilon-client/src/data/: client_data.rs  mod.rs  player_state.rs
epsilon-client/src/player/: mod.rs  player_scene.rs  player_system.rs
epsilon-client/src/scene/: info_label.rs  mod.rs
epsilon-client/src/ui/: health_bar.rs  inventory_scene.rs  mod.rs
epsilon-core/: Cargo.toml
epsilon-core/src/: lib.rs
epsilon-core/src/item/: item.rs  item_registry.rs  mod.rs
epsilon-core/src/player/: inventory.rs  mod.rs  player.rs  state.rs
epsilon-core/src/system/: cool_time.rs  mod.rs
epsilon-core/src/user/: user.rs
epsilon-server/: Cargo.toml
godot/: epsilon.gdextension  epsilon.gdextension.uid  export_presets.cfg  main_menu.tscn  project.godot
godot/assets/: icon.png.import  player-sample.png.import  player.png.import
godot/assets/items/: stone.png.import
godot/assets/player/: player-sample-standing-Sheet.png.import
godot/assets/tiles/: plane.png.import
godot/assets/ui/: bag.png.import  empty_heart.png.import  heart.png.import
godot/scene/: game_manager.tscn  lobby_scene.tscn  player.tscn  start_scene.tscn
godot/scene/lobby/: lobby_scene.tscn
godot/scene/ui/: HUD.tscn  empty_heart.tscn  heart.tscn  info.tscn  (+1 more)
rust/: Cargo.toml
rust/src/: lib.rs
(+4 files in other folders)
