[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"

members = ["epsilon-server", "epsilon-core", "epsilon-client"]

[workspace.dependencies]
ron = "0.12.0"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
mathrc = "0.2.6"
directories = "6.0.0"